--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,47 @@
-p{}
+/*got this idea from https://developer.mozilla.org/en-US/docs/Web/CSS/:first-of-type*/
+h1, p:first-of-type{
+    text-align: center;
+}
+
+body{
+    font-size: 1.5em;
+}
+/*https://www.w3schools.com/howto/howto_css_image_center.asp
+helped me center the image*/
 img{
     width: 40%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
+.reviews img{
+    height: 300px;
+}
+h2, h3{
+    text-align: center;
+    text-decoration:underline;
+}
+
+.reviews li{
+    font-size: 125%;
+}
+.reviews p::first-letter{
+    font-size: 150%;
+}
+.reviews p{
+    font-style: italic;
+    text-align: center;
+}
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/:first-child
+helped me with nth-child stuff*/
+.reviews li:nth-child(1){
+    color:#1fa121;
+}
+
+.reviews li:nth-child(n+2){
+    color:#8a2be2;
+}
+.reviews li:nth-child(3n){
+    color:#d11a1a;
+}
+
